--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             </div>
             <div class="menu">
                 <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Products</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href=".home">Home</a></li>
+                    <li><a href=".products">Products</a></li>
+                    <li><a href=".about">Contact</a></li>
                     <li class='add'><i class="fas fa-plus-square"> Add</i></li>
                 </ul>
                 <i class="fas fa-times"></i>
