--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             </div>
             <div class="menu">
                 <ul>
-                    <li><a href=".home">Home</a></li>
-                    <li><a href=".products">Products</a></li>
-                    <li><a href=".about">Contact</a></li>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#products">Products</a></li>
+                    <li><a href="#about">Contact</a></li>
                     <li class='add'><i class="fas fa-plus-square"> Add</i></li>
                 </ul>
                 <i class="fas fa-times"></i>
@@ -71,7 +71,7 @@
 
  <!-----------------------------------HOME-SECTION---------------------------------------->    
     
-    <section class="home">
+    <section id="home">
         <!-- ----------SWIPER-BACKGROUND------- -->
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
@@ -102,7 +102,7 @@
     
 
  <!-----------------------------------PRODUCTS-SECTION------------------------------------------>  
-    <section class="products">
+    <section id="products">
         <div class="container">
             <div class="header">
                 <h2>PRODUCTS</h2>
@@ -127,7 +127,7 @@
     </section>
   <!-----------------------------------PRODUCTS-SECTION------------------------------------------>  
 <!-----------------------------------ABOUT-SECTION------------------------------------------>  
-    <section class="about">
+    <section id="about">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-md-3">
